hello_blink_lib example to see how to add ext libraries using CMake

--- a/workspace/hello_blink_lib/CMakeLists.txt
+++ b/workspace/hello_blink_lib/CMakeLists.txt
@@ -5,7 +5,16 @@ cmake_minimum_required(VERSION 3.22.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 # Name the project
-project(hello_blink)
+project(hello_blink_lib)
 
 # Locate the source code for the application
 target_sources(app PRIVATE src/main.c)
+
+add_subdirectory(HelloLib)
+
+target_link_libraries(app PRIVATE HelloLib)
+
+target_include_directories(app PUBLIC
+                          "${PROJECT_BINARY_DIR}"
+                          "${PROJECT_SOURCE_DIR}/HelloLib"
+                          )
