tweaking CMake to use INTERFACE keyword in HelloLib so CMake will work recursively

--- a/workspace/hello_blink_lib/HelloLib/CMakeLists.txt
+++ b/workspace/hello_blink_lib/HelloLib/CMakeLists.txt
@@ -2,3 +2,7 @@
 cmake_minimum_required(VERSION 3.22.0)
 
 add_library(HelloLib HelloLib.c hello_support.c)
+
+target_include_directories(HelloLib
+                           INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+                           )
