--- a/tools/Dockerfile.espressif
+++ b/tools/Dockerfile.espressif
@@ -4,9 +4,9 @@
 ARG DEBIAN_VERSION=stable-20241016-slim
 ARG PASSWORD="zephyr"
 # Zephyr 3.7.0 is not working with ESP32S3, see: https://github.com/zephyrproject-rtos/zephyr/issues/71397
-#ARG ZEPHYR_RTOS_VERSION=3.7.0
-ARG ZEPHYR_RTOS_COMMIT=26603cefaf41298c417f2eee834ed40d9ab35d3a
-ARG ZEPHYR_SDK_VERSION=0.16.8
+ARG ZEPHYR_RTOS_VERSION=4.1.0
+ARG ZEPHYR_RTOS_COMMIT=v4.1-branch
+ARG ZEPHYR_SDK_VERSION=0.17.0
 ARG VS_CODE_SERVER_VERSION=4.93.1
 ARG VS_CODE_SERVER_PORT=8800
 ARG VS_CODE_EXT_CPPTOOLS_VERSION=1.22.10
@@ -122,7 +122,7 @@ RUN cd /opt/toolchains && \
     python3 -m pip install -r scripts/requirements-base.txt
 
 # Override the west manifest to only install necessary modules
-COPY scripts/espressif/west.yml /opt/toolchains/zephyr/west.yml
+#COPY scripts/espressif/west.yml /opt/toolchains/zephyr/west.yml
 
 # Instantiate west workspace and install tools
 RUN cd /opt/toolchains && \
